# CIS194-homework

./: .gitignore  .travis.yml  CIS194-homework.cabal  README.md  cabal.config  my-project.cabal  stack.yaml
app/: Main.hs
src/: Golf.hs  Hanoi.hs  Histogram.hs  LocalMaxima.hs  LogAnalysis.hs  Main.hs  ValidateCard.hs
src/Week4/: BinaryTree.hs  MoreFolds.hs  SieveOfSundaram.hs  Wholemeal.hs
src/Week5/: CalcStack.hs  CalcStackVars.hs  Calculator.hs  Expr.hs  ExprT.hs  StackVM.hs  VarExprT.hs
test/Week4/: BinaryTreeSpec.hs  MoreFoldsSpec.hs  SieveOfSundaramSpec.hs  WholemealSpec.hs
test/Week4/Wholemeal/: WholemealSpec.hs
test/Week5/: CalcStackSpec.hs  CalcStackVarsSpec.hs  CalculatorSpec.hs
